--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -14,74 +14,82 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 112500
-lib_deps = 
-	madhephaestus/ESP32Servo@^0.13.0
+
 	
 
 [env:AS5600]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
-lib_deps = 
-	robtillaart/AS5600@^0.3.6
-	rb-enantel/RC_ESC@^1.1.0
-	madhephaestus/ESP32Servo@^0.13.0
+; lib_deps = 
+; 	robtillaart/AS5600@^0.3.6
+; 	rb-enantel/RC_ESC@^1.1.0
+; 	madhephaestus/ESP32Servo@^0.13.0
 	
 
 [env:VL53]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>  -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
-lib_deps = 
-	pololu/VL53L0X@^1.3.1
-	rb-enantel/RC_ESC@^1.1.0
-	madhephaestus/ESP32Servo@^0.13.0
+
+
 	
 
 [env:Motor]
 platform = espressif32
 board = esp32dev
-framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+framework = arduinosrc_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
-lib_deps = 
-	rb-enantel/RC_ESC@^1.1.0
-	madhephaestus/ESP32Servo@^0.13.0
+
 	
 
 [env:MPU]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor> -<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 9600
-lib_deps = 
-	Wire
-	electroniccats/MPU6050@^0.6.0
+
 	
 
 [env:IR]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>   -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
-lib_deps = z3t0/IRremote@^4.1.2
+
 
 [env:LED_RGB]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
 
 [env:sensor_de_refletancia]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>  -<examples/VL53L5CX> -<examples/MPU+VL>
 monitor_speed = 112500
+
+[env:VL53L5CX]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia>  -<examples/MPU+VL>
+monitor_speed = 112500
+
+[env:MPU_VL]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
+monitor_speed = 112500
+
+; src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
