--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -42,7 +42,8 @@ monitor_speed = 112500
 [env:Motor]
 platform = espressif32
 board = esp32dev
-framework = arduinosrc_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
 monitor_speed = 112500
 
 	
