--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -14,8 +14,7 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 115200
-
-	
+lib_deps = madhephaestus/ESP32Encoder@^0.10.2
 
 [env:AS5600]
 platform = espressif32
@@ -23,11 +22,6 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
 monitor_speed = 115200
-; lib_deps = 
-; 	robtillaart/AS5600@^0.3.6
-; 	rb-enantel/RC_ESC@^1.1.0
-; 	madhephaestus/ESP32Servo@^0.13.0
-	
 
 [env:VL53]
 platform = espressif32
@@ -36,17 +30,12 @@ framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>  -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
 monitor_speed = 115200
 
-
-	
-
 [env:Motor]
 platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
 monitor_speed = 115200
-
-	
 
 [env:MPU]
 platform = espressif32
@@ -55,15 +44,12 @@ framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
 monitor_speed = 115200
 
-	
-
 [env:IR]
 platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>   -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
 monitor_speed = 115200
-
 
 [env:LED_RGB]
 platform = espressif32
@@ -106,7 +92,3 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
 monitor_speed = 115200
-
-
-
-; src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/ps4>
