--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -20,68 +20,68 @@ lib_deps = madhephaestus/ESP32Encoder@^0.10.2
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:VL53]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>  -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>  -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:Motor]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 
 [env:MPU]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:IR]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>   -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>   -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:LED_RGB]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:sensor_de_refletancia]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>  -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>  -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 
 [env:VL53L5CX]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia>  -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia>  -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:MPU_VL]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU_VL_VL_FODAO>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>
 monitor_speed = 115200
 
 [env:MPU_VL_VL_FODAO]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/micros_ros>
 monitor_speed = 115200
 
 
