--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -22,6 +22,7 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
 monitor_speed = 115200
+lib_deps = madhephaestus/ESP32Encoder@^0.10.2
 
 [env:VL53]
 platform = espressif32
@@ -62,6 +63,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>  -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
+monitor_speed = 115200
 
 [env:VL53L5CX]
 platform = espressif32
