--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -109,3 +109,16 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/micros_ros>-<examples/MPU_VL_VL_FODAO>
 monitor_speed = 115200
+
+[env:micro_ros_localization]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/VOLTAGE_READING>-<examples/micros_ros>
+monitor_speed = 115200
+board_microros_distro = iron
+
+lib_deps =  
+    madhephaestus/ESP32Encoder@^0.10.2
+    https://github.com/micro-ROS/micro_ros_arduino.git
+    https://github.com/micro-ROS/micro_ros_platformio.git
