--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -15,8 +15,6 @@ framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 115200
 lib_deps = madhephaestus/ESP32Encoder@^0.10.2
-            https://github.com/micro-ROS/micro_ros_arduino.git
-            https://github.com/micro-ROS/micro_ros_platformio.git
 
 [env:AS5600]
 platform = espressif32
@@ -57,7 +55,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>-<examples/micro_ros_localization>
 monitor_speed = 115200
 
 [env:sensor_de_refletancia]
