--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -35,8 +35,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>-<examples/micro_ros_localization>
-
+build_src_filter = +<examples/motor>
 [env:MPU]
 platform = espressif32
 board = esp32dev
@@ -120,3 +119,23 @@ lib_deps =
     madhephaestus/ESP32Encoder@^0.10.2
     https://github.com/micro-ROS/micro_ros_arduino.git
     https://github.com/micro-ROS/micro_ros_platformio.git
+
+
+
+
+
+[env:kinematics]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_src_filter = +<examples/kinematics>
+monitor_speed = 115200
+
+[env:enemy_localization]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_src_filter = +<examples/enemy_localization>
+monitor_speed = 115200
+
+
