--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -139,3 +139,19 @@ build_src_filter = +<examples/enemy_localization>
 monitor_speed = 115200
 
 
+[env:MX0]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_src_filter = +<examples/MX0>
+monitor_speed = 115200
+
+[env:localization]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_src_filter = +<examples/localization>
+monitor_speed = 115200
+
+
+
