--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -28,7 +28,7 @@ lib_deps = madhephaestus/ESP32Encoder@^0.10.2
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>  -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
+build_src_filter = +<examples/VL53>
 monitor_speed = 115200
 
 [env:Motor]
@@ -68,7 +68,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia>  -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>-<examples/micro_ros_localization>
+src_filter = +<examples/VL53L5CX>
 monitor_speed = 115200
 
 [env:MPU_VL]
@@ -152,6 +152,7 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/localization>
 monitor_speed = 115200
+
 
 
 
