--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -36,6 +36,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 build_src_filter = +<examples/motor>
+
 [env:MPU]
 platform = espressif32
 board = esp32dev
@@ -75,14 +76,14 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
+src_filter = +<
 monitor_speed = 115200
 
 [env:MPU_VL_VL_FODAO]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/micros_ros>-<examples/VOLTAGE_READING>
+src_filter = +<examples/MPU_VL_VL_FODAO>
 monitor_speed = 112500
 
 
