--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -55,8 +55,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>-<examples/micro_ros_localization>
-monitor_speed = 115200
+src_filter = +<examples/ledRgb> 
 
 [env:sensor_de_refletancia]
 platform = espressif32
