--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -14,7 +14,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 115200
-lib_deps = madhephaestus/ESP32Encoder@^0.10.2
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:AS5600]
 platform = espressif32
@@ -22,7 +25,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main>  -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
 monitor_speed = 115200
-lib_deps = madhephaestus/ESP32Encoder@^0.10.2
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:VL53]
 platform = espressif32
@@ -30,6 +36,10 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/VL53>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:Motor]
 platform = espressif32
@@ -37,25 +47,38 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/motor>
 
+
 [env:MPU]
 platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>-<examples/micro_ros_localization>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:IR]
 platform = espressif32
-board = esp32dev  
+board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>   -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:LED_RGB]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<examples/ledRgb> 
+src_filter = +<examples/ledRgb>
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:sensor_de_refletancia]
 platform = espressif32
@@ -63,6 +86,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>  -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/micros_ros>-<examples/VOLTAGE_READING>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:VL53L5CX]
 platform = espressif32
@@ -70,6 +97,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<examples/VL53L5CX>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:MPU_VL]
 platform = espressif32
@@ -77,6 +108,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:MPU_VL_VL_FODAO]
 platform = espressif32
@@ -84,8 +119,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<examples/MPU_VL_VL_FODAO>
 monitor_speed = 112500
-
-
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:microROS]
 platform = espressif32
@@ -94,11 +131,12 @@ framework = arduino
 build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/VOLTAGE_READING>
 monitor_speed = 115200
 board_microros_distro = iron
-
 lib_deps = 
-    https://github.com/micro-ROS/micro_ros_arduino.git
-    https://github.com/micro-ROS/micro_ros_platformio.git
-   
+	https://github.com/micro-ROS/micro_ros_arduino.git
+	https://github.com/micro-ROS/micro_ros_platformio.git
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:VOLTAGE_READING]
 platform = espressif32
@@ -106,6 +144,10 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/micros_ros>-<examples/MPU_VL_VL_FODAO>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:micro_ros_localization]
 platform = espressif32
@@ -114,15 +156,12 @@ framework = arduino
 build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb> -<examples/sensor_de_refletancia> -<examples/VL53L5CX> -<examples/MPU+VL>-<examples/MPU_VL_VL_FODAO>-<examples/VOLTAGE_READING>-<examples/micros_ros>
 monitor_speed = 115200
 board_microros_distro = iron
-
-lib_deps =  
-    madhephaestus/ESP32Encoder@^0.10.2
-    https://github.com/micro-ROS/micro_ros_arduino.git
-    https://github.com/micro-ROS/micro_ros_platformio.git
-
-
-
-
+lib_deps = 
+	https://github.com/micro-ROS/micro_ros_arduino.git
+	https://github.com/micro-ROS/micro_ros_platformio.git
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:kinematics]
 platform = espressif32
@@ -130,6 +169,10 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/kinematics>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:enemy_localization]
 platform = espressif32
@@ -137,7 +180,10 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/enemy_localization>
 monitor_speed = 115200
-
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:MX0]
 platform = espressif32
@@ -145,6 +191,10 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/MX0>
 monitor_speed = 115200
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
 
 [env:localization]
 platform = espressif32
@@ -152,8 +202,7 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<examples/localization>
 monitor_speed = 115200
-
-
-
-
-
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
