--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -106,7 +106,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<
+src_filter = +<examples/MPU+VL>
 monitor_speed = 115200
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
